--- a/index.html
+++ b/index.html
@@ -1,1 +1,72 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-F28Q22D1LS"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'G-F28Q22D1LS');
+  </script>
+  <meta charset="utf-8">
+  <meta name="description" content="ASFM: Augmented Social Force Model for Legged Robot Social Navigation">
+  <meta name="keywords" content="Motion and Path Planing, Collision Avoidance, human-Centered Automation">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>ASFM: Augmented Social Force Model&#10;for Legged Robot Social Navigation</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
+        rel="stylesheet">
+
+  <link rel="stylesheet" href="./static/css/bulma.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-carousel.min.css">
+  <link rel="stylesheet" href="./static/css/bulma-slider.min.css">
+  <link rel="stylesheet" href="./static/css/fontawesome.all.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
+  <link rel="stylesheet" href="./static/css/index.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+  <script src="https://www.youtube.com/iframe_api"></script>
+  <script src="./static/js/ajax.googleapis.com_ajax_libs_jquery_3.5.1_jquery.min.js"></script>
+  <script src="./static/js/isInViewport.min.js"></script>
+  <script defer src="./static/js/fontawesome.all.min.js"></script>
+  <script src="./static/js/bulma-carousel.min.js"></script>
+  <script src="./static/js/bulma-slider.min.js"></script>
+  <script src="./static/js/index.js"></script>
+
+  <link rel="icon" href="./favicon.ico?">
+  
+</head>
+<body>
+  
+  
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <div class="columns is-centered">
+        <div class="column has-text-centered">
+          <h1 class="title is-1 publication-title">Watch your STEPP:<br>Semantic Traversibility Estimation using Pose Projected Features</h1>
+          <div class="is-size-4 publication-authors">
+            <span class="author-block">
+              <a href="https://rpl-as-ucl.github.io/people/">Sebastian Aegidius</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!--               <a href="https://www.imperial.ac.uk/personal-robotics/people/post-doctoral-researchers-and-research-assistants/dr-rodrigo-chacon-quesada/">Rodrigo Chacón-Quesada</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+<!--               <a href="">Andromachi Maria Delfaki</a> -->
+              <br>
+<!--               <a href="https://www.imperial.ac.uk/people/y.demiris">Yiannis Demiris</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+              <a href="https://dkanou.github.io/">Dimitrios Kanoulas</a>
+            </span>
+          </div>
+          <!-- University Logos -->
+          <div class="university-logos" style="margin-top: 20px;">
+            <img src="./resources/UCL.png" alt="First University Logo" style="height: 70px; margin-right: 20px;">
+<!--             <img src="./resources/Imperial_College_London.png" alt="Second University Logo" style="height: 50px; margin-top: 21px;"> -->
+          </div>
+        </br>
+          <!-- CASE 2024 -->
+          <div class="case-2024" style="margin-top: 20px;">
+            <h2 class="title is-3">Under Review</h2>
+          </div>
+        </div>
+      </div>
