--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="ASFM: Augmented Social Force Model for Legged Robot Social Navigation">
   <meta name="keywords" content="Motion and Path Planing, Collision Avoidance, human-Centered Automation">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ASFM: Augmented Social Force Model&#10;for Legged Robot Social Navigation</title>
+  <title>Watch your STEPP:&#10;Semantic Traversibility Estimation using Pose Projected Features</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -58,11 +58,11 @@
               <a href="https://dkanou.github.io/">Dimitrios Kanoulas</a>
             </span>
           </div>
-          <!-- University Logos -->
+<!--           <!-- University Logos -->
           <div class="university-logos" style="margin-top: 20px;">
             <img src="./resources/UCL.png" alt="First University Logo" style="height: 70px; margin-right: 20px;">
 <!--             <img src="./resources/Imperial_College_London.png" alt="Second University Logo" style="height: 50px; margin-top: 21px;"> -->
-          </div>
+          </div> -->
         </br>
           <!-- CASE 2024 -->
           <div class="case-2024" style="margin-top: 20px;">
