--- a/index.html
+++ b/index.html
@@ -59,13 +59,13 @@
             </span>
           </div>
 <!--           <!-- University Logos -->
-          <div class="university-logos" style="margin-top: 20px;">
-            <img src="./resources/UCL.png" alt="First University Logo" style="height: 70px; margin-right: 20px;">
+<!--           <div class="uni/versity-logos" style="margin-top: 20px;">
+<!--             <img src="./resources/UCL.png" alt="First University Logo" style="height: 70px; margin-right: 20px;"> --> -->
 <!--             <img src="./resources/Imperial_College_London.png" alt="Second University Logo" style="height: 50px; margin-top: 21px;"> -->
-          </div> -->
+          </div>
         </br>
-          <!-- CASE 2024 -->
-          <div class="case-2024" style="margin-top: 20px;">
+          <!-- ICRA 2025 -->
+          <div class="ICRA-2025" style="margin-top: 20px;">
             <h2 class="title is-3">Under Review</h2>
           </div>
         </div>
