--- a/index.html
+++ b/index.html
@@ -59,9 +59,8 @@
             </span>
           </div>
 <!--           <!-- University Logos -->
-<!--           <div class="uni/versity-logos" style="margin-top: 20px;">
-<!--             <img src="./resources/UCL.png" alt="First University Logo" style="height: 70px; margin-right: 20px;"> --> -->
-<!--             <img src="./resources/Imperial_College_London.png" alt="Second University Logo" style="height: 50px; margin-top: 21px;"> -->
+          <div class="front_page" style="margin-top: 20px;"
+            <img src="./resources/front_page_1.png">
           </div>
         </br>
           <!-- ICRA 2025 -->
