--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
       
         <!-- Code Link. -->
         <span class="link-block">
-          <a href="https://github.com/RPL-CS-UCL/STEPP"
+          <a href="https://github.com/RPL-CS-UCL/STEPP-Code"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <i class="fab fa-github"></i>
