--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     gtag('config', 'G-F28Q22D1LS');
   </script>
   <meta charset="utf-8">
-  <meta name="description" content="ASFM: Augmented Social Force Model for Legged Robot Social Navigation">
-  <meta name="keywords" content="Motion and Path Planing, Collision Avoidance, human-Centered Automation">
+  <meta name="description" content="Watch Your STEPP: Semantic Traversability Estimation Using Pose Projected Features">
+  <meta name="keywords" content="Vision-Based Navigation, Motion an Path Planning, Legged Robots">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Watch your STEPP:&#10;Semantic Traversibility Estimation using Pose Projected Features</title>
 
