--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
     <!-- YouTube Video Embed Section -->
     <div class="video-container has-text-centered">
-      <iframe width="850" height="478" src="https://youtu.be/9W0WUrgL_Lg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+      <iframe width="850" height="478" src="https://www.youtube.com/embed/9W0WUrgL_Lg?si=KBlOGW9ypgdL6qv1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </div>
     <!-- Text Section -->
     <div class="columns is-centered has-text-centered">
