--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <h3 class="title is-2">ASFM vs SFM</h3>
+        <h3 class="title is-2">STEPP Demonstrations</h3>
       </div>
     </div>
     <!-- YouTube Video Embed Section -->
