--- a/index.html
+++ b/index.html
@@ -50,11 +50,11 @@
           <h1 class="title is-1 publication-title">Watch your STEPP:<br>Semantic Traversibility Estimation using Pose Projected Features</h1>
           <div class="is-size-4 publication-authors">
             <span class="author-block">
-              <a href="https://rpl-as-ucl.github.io/people/">Sebastian Aegidius</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<!--               <a href="https://www.imperial.ac.uk/personal-robotics/people/post-doctoral-researchers-and-research-assistants/dr-rodrigo-chacon-quesada/">Rodrigo Chacón-Quesada</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
-<!--               <a href="">Andromachi Maria Delfaki</a> -->
+              <a href="https://rpl-as-ucl.github.io/people/">Sebastian Aegidius*</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://dennisushi.github.io/">Dennis Hadjivelichkov</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://gogojjh.github.io/">Jianhao Jiao</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <br>
-<!--               <a href="https://www.imperial.ac.uk/people/y.demiris">Yiannis Demiris</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; -->
+              <a href="https://rpl-as-ucl.github.io/people/">Jonathan Embly-Riches</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="https://dkanou.github.io/">Dimitrios Kanoulas</a>
             </span>
           </div>
@@ -106,7 +106,7 @@
     <div class="columns is-vcentered has-text-centered">
       <!-- Video 1 -->
       <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px;">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/ASFM1.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
