added tree video

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
               <a href="https://dkanou.github.io/">Dimitrios Kanoulas</a>
             </span>
           </div>
-<!--           <!-- University Logos -->
-          <div class="front_page" style="margin-top: 20px;"
+          <!-- University Logos -->
+          <div class="front_page" style="margin-top: 20px;">
             <img src="./resources/front_page_1.png">
           </div>
         </br>
@@ -107,34 +107,34 @@
       <!-- Video 1 -->
       <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
-          <source src="./resources/ASFM1.mp4" type="video/mp4">
+          <source src="./resources/tree_vid_long.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <p>Meeting an oncoming pedestrian.</p>
       </div>
       <!-- Video 2 -->
-      <div class="column">
+      <!-- <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px;">
           <source src="./resources/ASFM2.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <p>Navigating around a crowd in narrow space</p>
-      </div>
+      </div> -->
       <!-- Video 3 -->
-      <div class="column">
+      <!-- <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
           <source src="./resources/ASFM3.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <p>Following a guide through a crowded area</p>
-      </div>
+      </div> -->
       <!-- Video 4 -->
-      <div class="column">
+      <!-- <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
           <source src="./resources/ASFM4.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <p>Reacting to seen and unseen pedestrians</p>
+        <p>Reacting to seen and unseen pedestrians</p> -->
       </div>
     </div>
   </div>
