--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
           </div>
           <!-- University Logos -->
           <div class="front_page" style="margin-top: 20px;">
-            <img src="./resources/front_page_1.png">
+            <img src="./resources/UKRI.png" style="height: auto;">
+            <img src="./resources/RPL_logo.png" style="height: auto;">
           </div>
         </br>
           <!-- ICRA 2025 -->
