--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <!-- University Logos -->
           <div class="front_page" style="margin-top: 20px;">
             <img src="./resources/UKRI.png" style="height: auto;">
+            <img src="./resources/UCL_logo.png" style="height: auto;">
             <img src="./resources/RPL_logo.png" style="height: auto;">
           </div>
         </br>
