--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
           </div>
           <!-- University Logos -->
           <div class="front_page" style="margin-top: 20px;">
-            <img src="./resources/UKRI.png" style="height: auto;">
-            <img src="./resources/UCL_logo.png" style="height: auto;">
-            <img src="./resources/RPL_logo.png" style="height: auto;">
+            <img src="./resources/UKRI.png" style="height: 70px;">
+            <img src="./resources/UCL_logo.png" style="height: 70px;">
+            <img src="./resources/RPL_logo.png" style="height: 70px;">
           </div>
         </br>
           <!-- ICRA 2025 -->
