added all top logos

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
             </span>
           </div>
           <!-- University Logos -->
-          <div class="front_page" style="margin-top: 20px;">
-            <img src="./resources/UKRI.png" style="height: 70px;">
-            <img src="./resources/UCL_logo.png" style="height: 70px;">
+          <div class="front_page" style="margin-top: 30px;">
+            <img src="./resources/UKRI.png" style="height: 70px; margin-right: 20px;">
+            <img src="./resources/UCL_logo.png" style="height: 70px; margin-right: 10px;">
             <img src="./resources/RPL_logo.png" style="height: 70px;">
           </div>
         </br>
