added all top logos

--- a/index.html
+++ b/index.html
@@ -102,64 +102,8 @@
   </div>
 </section>
 
-<!-- New Video Row Section -->
-<section class="section">
-  <div class="container">
-    <div class="columns is-vcentered has-text-centered">
-      <!-- Video 1 -->
-      <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
-          <source src="./resources/tree_vid_long.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p>Meeting an oncoming pedestrian.</p>
-      </div>
-      <!-- Video 2 -->
-      <!-- <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px;">
-          <source src="./resources/ASFM2.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p>Navigating around a crowd in narrow space</p>
-      </div> -->
-      <!-- Video 3 -->
-      <!-- <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
-          <source src="./resources/ASFM3.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p>Following a guide through a crowded area</p>
-      </div> -->
-      <!-- Video 4 -->
-      <!-- <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
-          <source src="./resources/ASFM4.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p>Reacting to seen and unseen pedestrians</p> -->
-      </div>
-    </div>
-  </div>
-</section>
-  
-<section class="section">
-  <div class="container">
-    <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-two-thirds">
-        <h3 class="title is-2">Abstract</h3>
-        <div class="content has-text-justified">
-          <p>Understanding the traversability of terrain is essential for autonomous robot navigation, particularly in unstructured environments such as natural landscapes. While traditional methods, such as occupancy mapping provide a basic framework, they often fail to account for the complex mobility capabilities of some platforms such as legged robots. In this work, we propose a method to estimate terrain traversability by learning from demonstrations of humans walking. Our approach leverages dense, pixel-wise feature embeddings generated using the DINOv2 vision Transformer model, which are processed through an encoder-decoder MLP architecture to analyze terrain segments. The averaged feature vectors, extracted from masked regions of interest, are used to train the model in a reconstruction-based framework. By minimizing reconstruction loss, the network distinguishes between familiar terrain, with low reconstruction error, and unfamiliar or hazardous terrain with higher reconstruction error. This approach facilitates anomaly detection, enabling a legged robot to navigate more effectively through challenging terrain. We run real world experiments on the ANYmal legged robot both indoor and outdoor to prove our proposed method.</p>
-          <br>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
 
-
-
-<section class="section">
+<section class="section"></section>
   <div class="container">
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
@@ -185,6 +129,62 @@
   </div>
 </section>
 
+  
+<section class="section">
+  <div class="container">
+    <!-- Abstract. -->
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <h3 class="title is-2">Abstract</h3>
+        <div class="content has-text-justified">
+          <p>Understanding the traversability of terrain is essential for autonomous robot navigation, particularly in unstructured environments such as natural landscapes. While traditional methods, such as occupancy mapping provide a basic framework, they often fail to account for the complex mobility capabilities of some platforms such as legged robots. In this work, we propose a method to estimate terrain traversability by learning from demonstrations of humans walking. Our approach leverages dense, pixel-wise feature embeddings generated using the DINOv2 vision Transformer model, which are processed through an encoder-decoder MLP architecture to analyze terrain segments. The averaged feature vectors, extracted from masked regions of interest, are used to train the model in a reconstruction-based framework. By minimizing reconstruction loss, the network distinguishes between familiar terrain, with low reconstruction error, and unfamiliar or hazardous terrain with higher reconstruction error. This approach facilitates anomaly detection, enabling a legged robot to navigate more effectively through challenging terrain. We run real world experiments on the ANYmal legged robot both indoor and outdoor to prove our proposed method.</p>
+          <br>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+
+
+<!-- New Video Row Section -->
+<section class="section">
+  <div class="container">
+    <div class="columns is-vcentered has-text-centered">
+      <!-- Video 1 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/tree_vid_long.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <p>Avoiding trees, but navigating medium tall grass.</p>
+      </div>
+      <!-- Video 2 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px;">
+          <source src="./resources/ridge_long_vid.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <p>Navigating around tree and barrier while walking through tall grass.</p>
+      </div>
+      <!-- Video 3 -->
+      <!-- <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
+          <source src="./resources/ASFM3.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <p>Following a guide through a crowded area</p>
+      </div> -->
+      <!-- Video 4 -->
+      <!-- <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
+          <source src="./resources/ASFM4.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <p>Reacting to seen and unseen pedestrians</p> -->
+      </div>
+    </div>
+  </div>
+</section>
 
 
   
