--- a/index.html
+++ b/index.html
@@ -106,11 +106,11 @@
 <section class="section"></section>
   <div class="container">
     <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
+    <!-- <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
         <h3 class="title is-2">STEPP Demonstrations</h3>
       </div>
-    </div>
+    </div> -->
     <!-- YouTube Video Embed Section -->
     <div class="video-container has-text-centered">
       <iframe width="850" height="478" src="https://www.youtube.com/embed/9W0WUrgL_Lg?si=KBlOGW9ypgdL6qv1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
