added all top logos

--- a/index.html
+++ b/index.html
@@ -103,14 +103,8 @@
 </section>
 
 
-<section class="section"></section>
+<section class="section reduced-margin"></section>
   <div class="container">
-    <!-- Abstract. -->
-    <!-- <div class="columns is-centered has-text-centered">
-      <div class="column is-two-thirds">
-        <h3 class="title is-2">STEPP Demonstrations</h3>
-      </div>
-    </div> -->
     <!-- YouTube Video Embed Section -->
     <div class="video-container has-text-centered">
       <iframe width="850" height="478" src="https://www.youtube.com/embed/9W0WUrgL_Lg?si=KBlOGW9ypgdL6qv1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
@@ -120,7 +114,7 @@
       <div class="column is-two-thirds">
         <div class="content">
           <p>
-            We present the Augmented Social Force Model (ASFM) for social navigation and compare it with the standard Social Force Model (SFM).
+            We present STEPP for traversability estimation and show its working method and real world deployment.
           </p>
           <br>
         </div>
