--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
 
   <link rel="icon" href="./favicon.ico?">
   
+  <!-- Add the reduced-margin class -->
+  <style>
+    .reduced-margin {
+      margin-top: 10px; /* Adjust this value as needed */
+    }
+  </style>
 </head>
 <body>
   
