--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
 <!-- New Video Row Section -->
 <section class="section">
   <div class="container">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <h3 class="title is-2">Robot Deployment In Unstructured And Structured Terrain</h3>
+      </div>
+    </div>
     <div class="columns is-vcentered has-text-centered">
       <!-- Video 1 -->
       <div class="column">
@@ -166,22 +171,24 @@
         </video>
         <p>Navigating around tree and barrier while walking through tall grass.</p>
       </div>
-      <!-- Video 3 -->
-      <!-- <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
-          <source src="./resources/ASFM3.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p>Following a guide through a crowded area</p>
-      </div> -->
-      <!-- Video 4 -->
-      <!-- <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
-          <source src="./resources/ASFM4.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-        </video>
-        <p>Reacting to seen and unseen pedestrians</p> -->
       </div>
+    <div class="column is-vcentered has-text-centered">
+      <!-- Video 3 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
+          <source src="./resources/maze_long_vid.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <p>Navigating through a maze like environment</p>
+      </div>
+      <!-- Video 4 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
+          <source src="./resources/mat_long_vid.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <p>Navigating over mats to show traversability for more than just color.</p>
+    </div>
     </div>
   </div>
 </section>
