long vid description

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <h3 class="title is-2">Robot Deployment In Unstructured And Structured Terrain</h3>
+        <h3 class="title is-2">STEPP In Unstructured And Structured Terrain</h3>
       </div>
     </div>
     <div class="columns is-vcentered has-text-centered">
