long vid description

--- a/index.html
+++ b/index.html
@@ -172,18 +172,18 @@
         <p>Navigating around tree and barrier while walking through tall grass.</p>
       </div>
     </div>
-    <div class="column is-vcentered has-text-centered">
-      <!-- Video 3 -->
+    <div class="columns is-vcentered has-text-centered">
+      <!-- Video 1 -->
       <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/maze_long_vid.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
-        <p>Navigating through a maze like environment</p>
+        <p>Navigating through a maze like environment.</p>
       </div>
-      <!-- Video 4 -->
+      <!-- Video 2 -->
       <div class="column">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px; muted">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbb; border-radius: 10px;">
           <source src="./resources/mat_long_vid.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
