long vid description

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
 
 <!-- New Video Row Section -->
-<section class="section">
+<section class="section reduced-margin">
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
