--- a/index.html
+++ b/index.html
@@ -194,7 +194,35 @@
 </section>
 
 
-  
+<!-- More STEPP section -->
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <h3 class="title is-2">STEPP Inference On Unseen Unstructured Terrain</h3>
+      </div>
+      <div class="column is-vcentered has-text-centered">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/STEPP_test_road_long.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+      <div class="column is-vcentered has-text-centered">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/STEPP_test_split.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+      <div class="column is-vcentered has-text-centered">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/STEPP_test_hole_long.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+    </div>
+  </div>
+</section>
 
 </body>
 
