--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <h3 class="title is-2">STEPP In Unstructured And Structured Terrain</h3>
+        <h3 class="title is-3">STEPP In Unstructured And Structured Terrain</h3>
       </div>
     </div>
     <div class="columns is-vcentered has-text-centered">
@@ -200,7 +200,7 @@
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <h3 class="title is-2">STEPP Inference On Unseen Unstructured Terrain</h3>
+        <h3 class="title is-3">STEPP Inference On Unseen Terrain</h3>
       </div>
       <div class="column is-vcentered has-text-centered">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
