--- a/index.html
+++ b/index.html
@@ -203,22 +203,28 @@
         <h3 class="title is-3">STEPP Inference On Unseen Terrain</h3>
       </div>
       <div class="column is-vcentered has-text-centered">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
-          <source src="./resources/STEPP_test_road_long.mp4" type="video/mp4">
-          Your browser does not support the video tag.          
-        </video>
+        <div class="column">
+          <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+            <source src="./resources/STEPP_test_road_long.mp4" type="video/mp4">
+            Your browser does not support the video tag.          
+          </video>
+        </div> 
       </div>
       <div class="column is-vcentered has-text-centered">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
-          <source src="./resources/STEPP_test_split.mp4" type="video/mp4">
-          Your browser does not support the video tag.          
-        </video>
+        <div class="column">
+          <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+            <source src="./resources/STEPP_test_split.mp4" type="video/mp4">
+            Your browser does not support the video tag.          
+          </video>
+        </div>
       </div>
       <div class="column is-vcentered has-text-centered">
-        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
-          <source src="./resources/STEPP_test_hole_long.mp4" type="video/mp4">
-          Your browser does not support the video tag.          
-        </video>
+        <div class="column">
+          <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+            <source src="./resources/STEPP_test_hole_long.mp4" type="video/mp4">
+            Your browser does not support the video tag.          
+          </video>
+        </div>
       </div>
     </div>
   </div>
