--- a/index.html
+++ b/index.html
@@ -230,6 +230,14 @@
   </div>
 </section>
 
+<section>
+  <div class="container">
+    <div class="column is-centered has-text-centered">
+      <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+    </div>
+  </div>
+</section>
+
 </body>
 
 </html>
