--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
 
 <section>
   <div class="container">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <h3 class="title is-3">STEPP Training Pipeline</h3>
+      </div>
+    </div>
     <div class="column is-centered has-text-centered">
       <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
     </div>
