--- a/index.html
+++ b/index.html
@@ -210,12 +210,12 @@
           Your browser does not support the video tag.          
         </video>
       </div> 
-      <div class="column">
+      <!-- <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/STEPP_test_split.mp4" type="video/mp4">
           Your browser does not support the video tag.          
         </video>
-      </div>
+      </div> -->
       <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/STEPP_test_hole_long.mp4" type="video/mp4">
