--- a/index.html
+++ b/index.html
@@ -204,23 +204,29 @@
       </div>
     </div>
     <div class="column is-vcentered has-text-centered">
+      <!-- Video 1 -->
       <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/STEPP_test_road_long.mp4" type="video/mp4">
           Your browser does not support the video tag.          
         </video>
+        <p>Straight forest road.</p>
       </div> 
-      <!-- <div class="column">
+      <!-- Video 2 -->
+      <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/STEPP_test_split.mp4" type="video/mp4">
           Your browser does not support the video tag.          
         </video>
-      </div> -->
+        <p>Forest road that splits.</p>
+      </div>
+      <!-- Video 3 -->
       <div class="column">
         <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
           <source src="./resources/STEPP_test_hole_long.mp4" type="video/mp4">
           Your browser does not support the video tag.          
         </video>
+        <p>Forest trail.</p>
       </div>
     </div>
   </div>
