--- a/index.html
+++ b/index.html
@@ -242,6 +242,22 @@
     <div class="column is-centered has-text-centered">
       <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 65%; border: 1px solid #bbbbbb; border-radius: 10px;">
     </div>
+    <p></p>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <div class="columns is-centered has-text-centered"></div>
+      <div class="column is-two-thirds">
+        <h3 class="title is-3">BibTex</h3>
+      </div>
+    </div>
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <p>(coming soon)</p>
+      </div>
+    </div>
   </div>
 </section>
 
