added rest of videos as more stepp

--- a/index.html
+++ b/index.html
@@ -195,8 +195,7 @@
 
 
 <!-- More STEPP section -->
-
-<section class="section">
+<section class="section"></section>
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
@@ -232,6 +231,7 @@
   </div>
 </section>
 
+
 <section>
   <div class="container">
     <div class="columns is-centered has-text-centered">
@@ -245,6 +245,66 @@
     <p></p>
   </div>
 </section>
+
+
+<!-- STEPP Inference section -->
+
+<section class="section">
+  <div class="container">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-two-thirds">
+        <h3 class="title is-3">More STEPP</h3>
+      </div>
+    </div>
+    <div class="columns is-vcentered has-text-centered">
+      <!-- Video 1 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/tree_2_small.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div> 
+      <!-- Video 2 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/behind_marshgate_small.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+      <!-- Video 3 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/tree_3_small.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+    </div>
+    <div class="columns is-vcentered has-text-centered">
+      <!-- Video 4 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/pillars_1_small.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div> 
+      <!-- Video 5 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/pillars_2_small.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+      <!-- Video 6 -->
+      <div class="column">
+        <video controls autoplay muted loop style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
+          <source src="./resources/pillars_3_small.mp4" type="video/mp4">
+          Your browser does not support the video tag.          
+        </video>
+      </div>
+    </div>
+  </div>
+</section>
+
 
 <section>
   <div class="container">
