--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
 
 
 <!-- More STEPP section -->
-<section class="section"></section>
+<section class="section">
   <div class="container">
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
