--- a/index.html
+++ b/index.html
@@ -241,14 +241,13 @@
     </div>
     <div class="column is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 80%; border: 1px solid #bbbbbb; border-radius: 10px;">
+        <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 100%; border: 1px solid #bbbbbb; border-radius: 10px;">
       </div>
-      <!-- <p>Our training pipeline is designed to predict terrain traversability using visual features extracted from images. We calculate the future poses projections in each image frame and segment the image. We leverage the DINOv2 vision transformer model to generate dense, pixel-wise feature embeddings from image frames. These embeddings are spatially aligned with each specific terrain segment containing the path. Each segment mapped to the feature embedding is then averaged across all channels producing a 384-dimensional vector. An encoder-decoder MLP architecture learns to reconstruct the averaged features vectors with the reconstruction loss being the traversability score.</p> -->
     </div>
     <div class="column is-centered">
       <div class="column is-two-thirds">
         <div class="content has-text-justified">
-          <p>Our training pipeline is designed to predict terrain traversability using visual features extracted from images. We calculate the future poses projections in each image frame and segment the image. We leverage the DINOv2 vision transformer model to generate dense, pixel-wise feature embeddings from image frames. These embeddings are spatially aligned with each specific terrain segment containing the path. Each segment mapped to the feature embedding is then averaged across all channels producing a 384-dimensional vector. An encoder-decoder MLP architecture learns to reconstruct the averaged features vectors with the reconstruction loss being the traversability score.</p> -->
+          <p>Our training pipeline is designed to predict terrain traversability using visual features extracted from images. We calculate the future poses projections in each image frame and segment the image. We leverage the DINOv2 vision transformer model to generate dense, pixel-wise feature embeddings from image frames. These embeddings are spatially aligned with each specific terrain segment containing the path. Each segment mapped to the feature embedding is then averaged across all channels producing a 384-dimensional vector. An encoder-decoder MLP architecture learns to reconstruct the averaged features vectors with the reconstruction loss being the traversability score.</p>
           <br>
         </div>
       </div>
