--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <!-- <div class="column is-two-thirds"> -->
-      <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 80%; border: 1px solid #bbbbbb; border-radius: 10px;">
+      <img src="./resources/pre_train_pipeline_2.png" alt="Description of the image" style="max-width: 80%">
       <!-- </div> -->
     </div>
     <div class="columns is-centered">
