--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta name="description" content="Watch Your STEPP: Semantic Traversability Estimation Using Pose Projected Features">
   <meta name="keywords" content="Vision-Based Navigation, Motion an Path Planning, Legged Robots">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Watch your STEPP:&#10;Semantic Traversibility Estimation using Pose Projected Features</title>
+  <title>Watch your STEPP:&#10;Semantic Traversability Estimation using Pose Projected Features</title>
 
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
         rel="stylesheet">
@@ -82,7 +82,7 @@
       <div class="column has-text-centered">
           <!-- Youtube Link. -->
         <span class="link-block">
-          <a href="https://youtu.be/9W0WUrgL_Lg"
+          <a href="https://youtu.be/u9qci0h_ixk"
             class="external-link button is-normal is-rounded is-dark">
             <span class="icon">
               <i class="fab fa-youtube"></i>
