--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <h1 class="title is-1 publication-title">Watch your STEPP:<br>Semantic Traversibility Estimation using Pose Projected Features</h1>
           <div class="is-size-4 publication-authors">
             <span class="author-block">
-              <a href="https://rpl-as-ucl.github.io/people/">Sebastian Aegidius*</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              <a href="https://rpl-as-ucl.github.io/people/">Sebastian Aegidius</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="https://dennisushi.github.io/">Dennis Hadjivelichkov</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <a href="https://gogojjh.github.io/">Jianhao Jiao</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               <br>
@@ -101,6 +101,18 @@
             <span>Code</span>
           </a>
         </span>
+
+        <!-- arXiv Link. -->
+        <span class="link-block">
+          <a href="https://arxiv.org/abs/2501.17594"
+            class="external-link button is-normal is-rounded is-dark">
+            <span class="icon">
+              <i class="fab fa-github"></i>
+            </span>
+            <span>Code</span>
+          </a>
+        </span>
+
         
       </div>
     
@@ -324,7 +336,11 @@
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <p>(coming soon)</p>
+        <p>@inproceedings{Aegidius2025STEPP,
+           title={Watch Your STEPP: Semantic Traversability Estimation using Pose Projected Features},
+           author={Sebastian Ægidius and Dennis Hadjivelichkov and Jianhao Jiao and Jonathan Embley-Riches and Dimitrios Kanoulas},
+           booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+           year={2025}}</p>
       </div>
     </div>
   </div>
