--- a/index.html
+++ b/index.html
@@ -329,22 +329,26 @@
 
 <section>
   <div class="container">
-    <div class="columns is-centered has-text-centered"></div>
+    <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <h3 class="title is-3">BibTex</h3>
+        <h3 class="title is-3">BibTeX</h3>
       </div>
     </div>
     <div class="columns is-centered has-text-centered">
       <div class="column is-two-thirds">
-        <p>@inproceedings{Aegidius2025STEPP,
-           title={Watch Your STEPP: Semantic Traversability Estimation using Pose Projected Features},
-           author={Sebastian Ægidius and Dennis Hadjivelichkov and Jianhao Jiao and Jonathan Embley-Riches and Dimitrios Kanoulas},
-           booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
-           year={2025}}</p>
+        <pre>
+@inproceedings{Aegidius2025STEPP,
+   title={Watch Your STEPP: Semantic Traversability Estimation using Pose Projected Features},
+   author={Sebastian Ægidius and Dennis Hadjivelichkov and Jianhao Jiao and Jonathan Embley-Riches and Dimitrios Kanoulas},
+   booktitle={IEEE International Conference on Robotics and Automation (ICRA)},
+   year={2025}
+}
+        </pre>
       </div>
     </div>
   </div>
 </section>
+
 
 </body>
 
