--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <span class="icon">
               <i class="fab fa-github"></i>
             </span>
-            <span>Code</span>
+            <span>arXiv</span>
           </a>
         </span>
 
