--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Watch your STEPP:<br>Semantic Traversibility Estimation using Pose Projected Features</h1>
+          <h1 class="title is-1 publication-title">Watch your STEPP:<br>Semantic Traversability Estimation using Pose Projected Features</h1>
           <div class="is-size-4 publication-authors">
             <span class="author-block">
               <a href="https://rpl-as-ucl.github.io/people/">Sebastian Aegidius</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -73,7 +73,7 @@
         </br>
           <!-- ICRA 2025 -->
           <div class="ICRA-2025" style="margin-top: 20px;">
-            <h2 class="title is-3">Under Review</h2>
+            <h2 class="title is-3">IEEE International Conference on Robotics and Automation (ICRA) 2025</h2>
           </div>
         </div>
       </div>
